# SoftwareBasico

./: .gitignore  CMakeLists.txt  bin.asm  montador  montador.cpp  readme.md
include/: InstructionsUtils.h  StringFilesUtils.h
src/: InstructionsUtils.cpp  StringFileUtils.cpp
